Closed Bug 716357 Opened 14 years ago Closed 14 years ago

Fix license header in FilteringWrapper.cpp

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: Ms2ger, Assigned: Ms2ger)

Details

Attachments

(1 file)

Attached patch Patch v1Splinter Review
* Portions created by the Initial Developer are Copyright (C) 2010 * the Initial Developer. All Rights Reserved. is missing. (Also, indentation is off.)
Attachment #586792 - Flags: review?(gerv)
Comment on attachment 586792 [details] [diff] [review] Patch v1 r=gerv. Gerv
Attachment #586792 - Flags: review?(gerv) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: