Bug 716357 - Fix license header in FilteringWrapper.cpp; r=gerv DONTBUILD